feat(security): harden JWT filter and provider based on review feedback
- JwtAuthenticationFilter: replace ifPresentOrElse with explicit Optional flow and WARN on invalid/expired tokens; keep chain continuation in finally; preserve case-insensitive Bearer + trim.
- JwtTokenProvider: make no-arg constructor package-private to avoid misconfigured instances; enforce strict claim parsing (non-collection claims -> empty set).
- Tests: add case for non-collection claim; keep existing skew/subject-only/expired scenarios.